syntax = "proto3";
package commandpoc;
import "google/protobuf/timestamp.proto";
option java_package = "org.tmt.tcs.mcs.MCShcd.msgTransformers.protos";
option java_outer_classname = "TcsMcsCommandProtos";

message LifeCycleCommand {
  enum TransitionType {
    SYSTEMOFF = 0;
    REBOOT = 1;
    STARTUP = 2;
    SHUTDOWN = 3;
  }

   TransitionType transitionType = 1;
  
}

enum Axes {
    AZ = 0;
    EL = 1;
    BOTH = 2;
  }
message Startup{
}
message Shutdown{
}
message FollowCommand {
 }
enum Operation{
	on = 0;
	off = 1;
}
message AxisCommand{
	 Axes axes = 1;
	 Operation ops = 2;
}
message DatumCommand{
	  Axes axes = 1;
}
message PointCommand{
	  Axes axes = 1;
}
message PointDemandCommand{
	  double  AZ = 1;
	  double  EL = 2;
}
message ServoOffCommand{
	  Axes axes = 1;
}
message ResetCommand{
	  Axes axes = 1;
}
message SetDiagnosticCommand{
	 Operation ops = 2;
}
message CancelProcessingCommand{
}
message ReadConfiguration{
}
enum Direction{
	in = 0;
	out = 1;
}
message ElevationStowLockCommand{
	 Direction dir = 1;
}
enum Position{
	zero_degree = 0;
	ninety_degree = 1;
}
message ElevationStowPositionCommand{
	 Position pos = 1 ;
}
message MCSCommandResponse {
  enum ErrorState {
    NONE = 0;
    ILLEGAL_STATE = 1;
    BUSY = 2;
    OUT_OF_RANGE = 3;
    OUT_OF_SPEC = 4;
    FAILED = 5;
  }  
  enum CmdError{
    OK = 0;
    ERROR = 1;
  }
   CmdError cmdError= 1;
   ErrorState errorState = 2;
   string errorInfo = 3;
   google.protobuf.Timestamp processedTime = 4;
}
